--- a/releng/org.eclipse.xtend.tycho.parent/pom.xml
+++ b/releng/org.eclipse.xtend.tycho.parent/pom.xml
@@ -17,7 +17,17 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
 		<sign.skip>true</sign.skip>
+		<target-platform-artifactId>org.eclipse.xtend.target</target-platform-artifactId>
 	</properties>
+
+	<profiles>
+		<profile>
+			<id>useLatestTarget</id>
+			<properties>
+				<target-platform-artifactId>org.eclipse.xtend.latest.target</target-platform-artifactId>
+			</properties>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
@@ -59,7 +69,7 @@
 					<target>
 						<artifact>
 							<groupId>org.eclipse.xtend</groupId>
-							<artifactId>org.eclipse.xtend.target</artifactId>
+							<artifactId>${target-platform-artifactId}</artifactId>
 							<version>${project.parent.version}</version>
 						</artifact>
 					</target>
